--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5738,21 +5738,21 @@
   "description.enchanted.rose": "魔法玫瑰是永恒之美的象征，以其神奇的魅力引人入胜。",
   "description.flower.cart": "盛开鲜花的花车是一个充满花卉的移动花园。",
   "softBan.goblinDetection": "哥布林检测",
-  "softBan.networkWarning": "哥布林注意到一些类似的设备连接到您的网络。为了帮助所有人保持 Bumpkin 经济的安全和公平，请完成快速验证以继续您的冒险之旅。",
+  "softBan.networkWarning": "哥布林注意到一些类似的设备连接到您的网络。为了帮助所有人保持乡包佬经济的安全和公平，请完成快速验证以继续您的冒险之旅。",
   "softBan.step1": "第 1 步",
   "softBan.socialVerification": "加入 Discord 或 Telegram 社区，按照步骤验证您的账户。",
   "softBan.discordVerification": "Discord 验证",
-  "softBan.or": "要么",
-  "softBan.telegramVerification": "电报验证",
+  "softBan.or": "或",
+  "softBan.telegramVerification": "Telegram 验证",
   "softBan.step2": "第 2 步",
-  "softBan.faceVerification": "为了确保每个 Bumpkin 都是独一无二的，我们要求快速进行人脸验证。您的隐私很重要——这仅用于保护经济安全和阻止机器人。",
-  "softBan.faceProtection": "面部防护",
+  "softBan.faceVerification": "为了确保每个乡包佬都是独一无二的，我们要求快速进行人脸验证。您的隐私很重要——这仅用于保护经济安全和阻止机器人。",
+  "softBan.faceProtection": "人脸防护",
   "softBan.discordOnboarding": "Discord 入门指南",
   "softBan.back": "返回",
-  "softBan.telegramVerificationTitle": "电报验证",
+  "softBan.telegramVerificationTitle": "Telegram 验证",
   "softBan.telegramInstructions": "打开 Sunflower Land Bot 并运行 /verify 命令。",
-  "softBan.openBot": "打开机器人",
-  "softBan.discordInstructions": "访问 #verify 频道并键入 /verify 命令。",
-  "faceRecognition.mobile": "有问题吗？",
-  "faceRecognition.mobile.two": "在移动设备上试用。"
+  "softBan.openBot": "打开 Bot",
+  "softBan.discordInstructions": "请在 #verify 频道中输入 /verify 命令。",
+  "faceRecognition.mobile": "您遇到问题了吗？",
+  "faceRecognition.mobile.two": "请在移动设备上尝试操作。"
 }
