--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5130,7 +5130,7 @@
   "vip.benefit.cookingQueue": "在烹饪大楼里排队食谱",
   "restrictionReason.hasBonusAnimals.barn": "谷仓",
   "restrictionReason.hasBonusAnimals.henHouse": "鸡舍",
-  "description.igloo": "外面很冷，里面很舒服——家的甜蜜冰冻家。在《风云变幻》章节中，来自 “送货、家务和赏金” 的+1 Timeshard。",
+  "description.igloo": "外面很冷，里面很舒服——家的甜蜜冰冻家。在《风云变幻》章节中，来自 “送货、家务和赏金” 的 +1 Timeshard。",
   "description.hammock": "在微风中轻轻摇摆，享受来之不易的休息。在《风云变幻》章节中，从 “交付、琐事和赏金” 中获得 +1 Timeshard。",
   "reputation.sprout.description": "每天 1 份商城清单",
   "reputation.seedling.trades": "每天 2 个商城清单",
@@ -5181,7 +5181,7 @@
   "news.flower.launch": "$FLOWER 发布会",
   "news.flower.launch.description": "Sunflower Land 即将推出新的$ERC20。了解新实用程序以及如何赚钱。",
   "news.ronin.network": "Ronin 网络",
-  "news.ronin.network.description": "Ronin 玩家现在可以玩Sunflower Land了！额外的钱包功能即将推出。",
+  "news.ronin.network.description": "Ronin 玩家现在可以玩 Sunflower Land了！额外的钱包功能即将推出。",
   "news.winds.of.change.chapter": "《风云变幻》章节",
   "news.winds.of.change.description": "风云变幻章节已经开始。争夺 NFT 和奖励！",
   "news.title": "新闻",
