--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -4259,7 +4259,7 @@
   "vip.purchase.confirm": "你确定要购买 [0@/美元] 的 VIP 访问权限吗？",
   "vip.benefits": "好处",
   "vip.oneYear.warning": "您已经拥有 1 年的 VIP 访问权限。",
-  "vip.access": "贵宾访问权限",
+  "vip.access": "VIP 访问权限",
   "vip.benefit.airdrop": "每月空投",
   "vip.benefit.expBoost": "10% 经验值提升",
   "vip.benefit.bonusDelivery": "奖励配送和琐事奖励",
@@ -4599,20 +4599,20 @@
   "description.solflareAegis.boost": "夏季作物作物时间 -50%",
   "description.autumnsEmbrace.boost": "秋季地块收割时间 -50%",
   "description.frozenHeart.boost": "+1 地块冬季作物产量",
-  "vip.benefit.windOfChange": "风云变幻贵宾收益率提升（+0.25 新作物）",
+  "vip.benefit.windOfChange": "风云变幻 VIP 收益率提升（+0.25 新作物）",
   "temperateSeason.possibleEventsDescription": "参观广场上的气象商店以保护您的农场！",
   "beds": "床",
   "weatherItems": "天气物品",
   "birdieplaza.currentSeason": "我们目前处于 {{currentSeason}} 章节，而 Bumpkins 正为 {{seasonalTicket}} s 而疯狂。",
   "description.catch.the.kraken.banner": "Kraken 在这里！捕捉海怪章节参与者的印记。",
-  "description.solar.flare.ticket": "（LEGACY）在 Solar Flare 章节期间使用的门票",
-  "description.dawn.breaker.ticket": "（LEGACY）在《黎明破坏者》章节中使用的门票",
-  "description.crow.feather": "（LEGACY）在《巫师之夜》门票章节中使用的门票",
-  "description.mermaid.scale": "（LEGACY）在 “捉海怪” 章节中使用的门票",
-  "description.scroll": "在《派系冲突》章节中使用的门票",
-  "description.amberFossil": "法老宝藏章节期间使用的门票",
-  "orderhelp.New.Season": "新的篇章即将到来，门票交付将暂时关闭。",
-  "season.free.season.passes": "免费章节横幅",
+  "description.solar.flare.ticket": "（往期）在《日光闪耀》章节期间使用的章节票券",
+  "description.dawn.breaker.ticket": "（往期）在《拂晓来使》章节期间使用的章节票券",
+  "description.crow.feather": "（往期）在《女巫之夜》章节期间使用的章节票券",
+  "description.mermaid.scale": "（往期）在《海怪围猎》章节期间使用的章节票券",
+  "description.scroll": "（往期）在《帮派冲突》章节期间使用的章节票券",
+  "description.amberFossil": "（往期）在《法老秘宝》章节期间使用的章节票券",
+  "orderhelp.New.Season": "新的篇章即将到来，章节票券送货将暂时关闭。",
+  "season.free.season.passes": "免费章节旗帜",
   "season.free.season.passes.description": "获得每个章节的旗帜",
   "season.vip.access": "章节 VIP 访问权限",
   "whatsOn.seasonCompetition": "分会竞赛",
@@ -5214,7 +5214,7 @@
   "skill.toughTree": "获得 x3 木材产量的几率为 1/10",
   "reputation.tiers": "等级",
   "reputation.earnPoints": "赚取积分",
-  "reputation.guide.upgrade": "解锁当前岛屿上的所有扩展包，然后点击木筏上的哥布林到达下一个岛屿。（基础岛 -> 春岛 -> 沙漠 -> 火山）",
+  "reputation.guide.upgrade": "解锁当前岛屿上的所有扩展包，然后点击木筏上的哥布林到达下一个岛屿。（基础岛 -> 春花岛 -> 黄沙岛 -> 火山岛）",
   "reputation.guide.levelUp": "要提升你的 Bumpkin 等级，在烹饪大楼里煮食物，然后点击帐篷或房子前面的 Bumpkin 来喂它。",
   "reputation.guide.proofOfHumanity": "前往 Retreat Island 并找到银行，完成 “人性证明”。",
   "reputation.guide.ownBud": "通过游戏内或第三方市场购买 Bud 即可拥有 Bud。",
@@ -5289,7 +5289,7 @@
   "faceRecognition.failedTitle": "失败",
   "faceRecognition.successTitle": "成功",
   "faceRecognition.successDescription": "您已成功验证您的身份。是时候开始耕作了！",
-  "season.vip.description": "通过福利、折扣、奖励门票、空投等在这一章中占据主导地位！",
+  "season.vip.description": "通过福利、折扣、额外章节票券、空投等在这一章中占据主导地位！",
   "ronin.nft.cooldown": "Ronin VIP 将在 {{time}} 中激活",
   "faceRecognition.label": "快速拍张照片",
   "faceRecognition.attemptsLeft": "{{attempts}} 还剩下尝试次数",
@@ -5404,7 +5404,7 @@
   "marketplace.soldListing": "已售清单",
   "marketplace.madeOffer": "已报价",
   "marketplace.acceptedOffer": "接受的报价",
-  "chapters.guide.two": "门票可以在 Stella 的 Megastore 或拍卖会上消费，玩家可以在拍卖会上争夺独家物品。",
+  "chapters.guide.two": "章节票券可以在 Stella 的 Megastore 或拍卖会上消费，玩家可以在拍卖会上争夺独家物品。",
   "mayor.plaza.notEnoughGems": "你没有足够的宝石",
   "mayor.paperworkComplete": "恭喜 {{username}}，您的所有文件都已完成。期待再次与您相见！",
   "mayor.plaza.usernameChangedRecently": "看来你最近改了名字！",
