--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -3319,7 +3319,7 @@
   "marketplace.signAndList": "签名 & 上架",
   "marketplace.itemInUse": "物品正在使用",
   "marketplace.availableCount": "可用：{{count}}",
-  "marketplace.itemSecured": "物品已妥当",
+  "marketplace.itemSecured": "物品已妥置",
   "marketplace.youDontOwn": "您未拥有这件物品！",
   "marketplace.itemInUseWarning": "此物品目前正在被您的农场使用。您必须先把它移到您的库存。",
   "description.factionShop.paella.one": "一道经典的西班牙菜，味道浓郁。",
@@ -3711,58 +3711,58 @@
   "gems.noShipment": "无补货",
   "gems.buyStock": "请下令购买补货以获得补充。",
   "npcDialogues.pumpkinPete.chore1": "你看到天空中的奇怪物体了吗？留心你的庄稼！",
-  "npcDialogues.pumpkinPete.chore2": "这些新的动物产品带来了许多新的农业可能性！",
-  "npcDialogues.pumpkinPete.chore3": "有了所有这些新资源，农贸市场比以往任何时候都更加繁闹！",
-  "npcDialogues.peggy.chore1": "我几乎跟不上所有这些新食谱的要求！每个人都想尝试用动物产品做饭。",
+  "npcDialogues.pumpkinPete.chore2": "这些新动物产品提供了许多农耕新机遇！",
+  "npcDialogues.pumpkinPete.chore3": "有了如此种种新资源，农贸市场是前所未有的繁闹哇！",
+  "npcDialogues.peggy.chore1": "这些个新食谱的诉求让我几乎忙不过来了！人人都想试试用动物产品做菜。",
   "npcDialogues.peggy.chore2": "这些新的芝士和鸡蛋食谱让我在厨房忙得不可开交。",
-  "npcDialogues.peggy.chore3": "我希望你在烹饪时不要使用任何宝石…… 那太糟糕了！",
-  "npcDialogues.betty.chore1": "农贸市场从未如此繁忙过！我们的小麦、玉米和大麦缺货了。",
-  "npcDialogues.betty.chore2": "现在每个人都需要动物饲料。需求激增！",
-  "npcDialogues.miranda.chore1": "你试过种番茄吗？我还是无法决定它们是水果还是蔬菜！",
-  "npcDialogues.miranda.chore2": "今天的太阳非常适合跳舞！尽管我可以不在天空中看到奇怪的景象……",
-  "npcDialogues.miranda.chore3": "没有什么比在沙滩上度过阳光明媚的日子更胜一筹了，尤其是对动物如此兴奋的时候！",
-  "npcDialogues.blacksmith.chore1": "这次推出手工盒让我担心自己的生意……",
-  "npcDialogues.blacksmith.chore2": "高质量工作所需的优质工具-这就是我经常说的话。",
-  "npcDialogues.blacksmith.chore3": "这些新的动物产品最好不要影响金属贸易。",
-  "npcDialogues.raven.chore1": "我一直在想象…… 一只可以改变 Sunflower Land 一切的暗羊。",
-  "npcDialogues.raven.chore2": "阴影在我们中间低声说出奇怪的生物……",
-  "npcDialogues.raven.chore3": "这些神秘的目击事件…… 他们身上有暗能量。",
-  "npcDialogues.cornwell.chore1": "我感觉到一场危险的风暴即将来临…… 这是不确定的时期。",
-  "npcDialogues.cornwell.chore2": "庄稼给我讲述了变革的故事。我们必须为即将发生的事情做好准备。",
-  "npcDialogues.cornwell.chore3": "让您的谷物储备充足——未来几天我们可能需要它们。",
-  "npcDialogues.finley.chore1": "你不会相信我在海里看到的 —— 一个奇怪的像牛一样的生物！",
-  "npcDialogues.finley.chore2": "我的兄弟芬恩可能会讲高谈阔论，但我所看到的是真实的。",
-  "npcDialogues.finley.chore3": "最近水域有所不同，那里的情况正在发生变化。",
-  "npcDialogues.gordo.chore1": "你尝试过新芝士食谱吗？简直太棒了！",
-  "npcDialogues.gordo.chore2": "全新的意大利面条和披萨菜令人垂涎三尺了！",
-  "npcDialogues.gordo.chore3": "这些动物产品正在彻底改变我们的美食！",
-  "npcDialogues.tywin.chore1": "我正在对所有动物产品征收新税。皇冠必须获利！",
+  "npcDialogues.peggy.chore3": "我希望你在烹饪时可不要使用任何宝石……那太糟糕了！",
+  "npcDialogues.betty.chore1": "农贸市场从未如此繁忙过！我们的小麦、玉米和大麦都快缺货了。",
+  "npcDialogues.betty.chore2": "现在人人都要动物饲料。需求激增！",
+  "npcDialogues.miranda.chore1": "你试过种番茄吗？我还是没法判断它们算水果还是蔬菜！",
+  "npcDialogues.miranda.chore2": "今天的阳光非常适合跳上支舞！虽然如果天空可以没有那些奇怪景象更好……",
+  "npcDialogues.miranda.chore3": "没有什么好过沙滩上阳光明媚的一天，尤其是大家都为动物如此兴奋的时候！",
+  "npcDialogues.blacksmith.chore1": "这次推出的锻打箱让我很担心自己的生意……",
+  "npcDialogues.blacksmith.chore2": "工欲善其事，必先利其器——这话已是我老生常谈了。",
+  "npcDialogues.blacksmith.chore3": "这些新动物产品最好别影响我金属贸易。",
+  "npcDialogues.raven.chore1": "我一直见有预示……一只可以改变 Sunflower Land 一切的黑绵羊。",
+  "npcDialogues.raven.chore2": "阴影在我们之间低语谈及奇异生物……",
+  "npcDialogues.raven.chore3": "这些神秘景象……他们潜伏有暗能量。",
+  "npcDialogues.cornwell.chore1": "我感觉到一场危险的风暴即将来临……如今世道真是前途未卜啊。",
+  "npcDialogues.cornwell.chore2": "庄稼讲述着风云变幻。我们必须未雨绸缪、做好准备。",
+  "npcDialogues.cornwell.chore3": "积谷防饥——不久我们可得用上。",
+  "npcDialogues.finley.chore1": "我在海里看到什么说出来你不信——一个像牛一样的奇怪生物！",
+  "npcDialogues.finley.chore2": "我的兄弟 Finn 也许爱吹牛，但我所见的可是真的。",
+  "npcDialogues.finley.chore3": "最近水域有显异样，那里有什么正在酝酿。",
+  "npcDialogues.gordo.chore1": "你试过新芝士食谱了吗？简直太棒了！",
+  "npcDialogues.gordo.chore2": "吃上新做的意大利面和披萨这辈子都值了啊！",
+  "npcDialogues.gordo.chore3": "这些动物产品正在彻底改变我们的菜肴！",
+  "npcDialogues.tywin.chore1": "我正在对所有动物产品征收新税。皇族必须获利！",
   "npcDialogues.tywin.chore2": "必须对这些新资源进行适当监管和征税。",
-  "npcDialogues.tywin.chore3": "贵族只需要最好的动物产品——看看吧。",
-  "npcDialogues.oldSalty.chore1": "呃，我一直在寻宝活动中收集牛头骨。奇怪的发现……",
-  "npcDialogues.oldSalty.chore2": "海洋在变化，奇怪的生物潜伏在深处。",
-  "npcDialogues.oldSalty.chore3": "我发现的这些牛头骨有朝一日可能会值钱！",
-  "npcDialogues.guria.chore1": "精灵说的是绿色生物，不像我认识的任何哥布林……",
-  "npcDialogues.guria.chore2": "我的水晶球在我们农场上空的天空中显示出奇怪的形状。",
-  "npcDialogues.guria.chore3": "神秘的生物和巨大的变化笼罩着未来。",
-  "npcDialogues.petro.chore1": "这种石油短缺每天都在恶化！",
-  "npcDialogues.petro.chore2": "我们需要更多的资源来保持机器的平稳运行。",
-  "npcDialogues.petro.chore3": "这些机械问题无法自行解决，给我多带点机油！",
-  "npcDialogues.chase.chore1": "我的动物最近表现得很奇怪。有些人失踪了！",
-  "npcDialogues.chase.chore2": "田野里有神秘的踪迹——这与我以前见过的任何轨迹都不一样。",
-  "npcDialogues.chase.chore3": "与动物保持亲密关系，这些地方正在发生奇怪的事情。",
-  "npcDialogues.birdie.chore1": "新的 Megastore 格式绝对太棒了！如此惊人的销售！",
-  "npcDialogues.birdie.chore2": "你看过最新的季节性时装吗？简直太棒了！",
-  "npcDialogues.birdie.chore3": "这些新的动物产品正在激发一些惊人的新设计！",
-  "npcDialogues.grimbly.chore1": "这些新的动物产品将成为极好的手工材料！",
-  "npcDialogues.grimbly.chore2": "给我带来更多资源 —— 锻造厂渴望新材料！",
-  "npcDialogues.grimbly.chore3": "这些动物为手工制作带来了新的机会。别让我等！",
-  "npcDialogues.garth.chore1": "这些动物产品可能会彻底改变我的药水制作方式！",
-  "npcDialogues.garth.chore2": "我想知道这些新成分具有什么神奇的特性……",
-  "npcDialogues.garth.chore3": "Sunflorians 不会喜欢我用这些动物产品做实验！",
-  "npcDialogues.grimtooth.chore1": "啊，这些来自动物的新宝物值得重量的金币！",
-  "npcDialogues.grimtooth.chore2": "海洋在变化，我们可以掠夺的战利品也在变化！",
-  "npcDialogues.grimtooth.chore3": "这些动物产品将在黑市上卖出高价！",
+  "npcDialogues.tywin.chore3": "贵族只接受最好的动物产品——看着办。",
+  "npcDialogues.oldSalty.chore1": "呃啊，我寻宝一直收来牛头骨。奇怪东西……",
+  "npcDialogues.oldSalty.chore2": "海洋暗流涌动，奇怪生物在深处蛰伏。",
+  "npcDialogues.oldSalty.chore3": "我找来的这些牛头骨有朝一日也是可能会值钱的！",
+  "npcDialogues.guria.chore1": "精魂提及了绿色生物，却不像我所知的任何哥布林……",
+  "npcDialogues.guria.chore2": "我的水晶球显示我们农场上空有奇怪形状。",
+  "npcDialogues.guria.chore3": "神秘的生物和巨大的变幻笼罩着未来。",
+  "npcDialogues.petro.chore1": "这石油紧缺每天都在恶化！",
+  "npcDialogues.petro.chore2": "我们需要更多的资源来保证机器的平稳运行。",
+  "npcDialogues.petro.chore3": "这些机械毛病可不会自己修好，给我多上点机油！",
+  "npcDialogues.chase.chore1": "我的动物们最近表现得很奇怪。有些都失踪了！",
+  "npcDialogues.chase.chore2": "田野里有许多神秘踪迹——我可从未见过此般。",
+  "npcDialogues.chase.chore3": "密切关照好你的动物，这些地方有怪事在发生。",
+  "npcDialogues.birdie.chore1": "新的超星商店款式真是太棒了！好一出震撼卖场！",
+  "npcDialogues.birdie.chore2": "你看过最新的当季时装了吗？简直太棒了！",
+  "npcDialogues.birdie.chore3": "这些新的动物产品正启发了一些惊人新设计！",
+  "npcDialogues.grimbly.chore1": "这些新的动物产品将成为极好的锻造材料！",
+  "npcDialogues.grimbly.chore2": "给我带来更多资源——锻炉渴望新材料！",
+  "npcDialogues.grimbly.chore3": "这些动物给锻造带来了新可能。别让我等着！",
+  "npcDialogues.garth.chore1": "这些动物产品可能会令我的药水制作带来革新！",
+  "npcDialogues.garth.chore2": "我好奇这些新成分具有什么神奇的特性……",
+  "npcDialogues.garth.chore3": "Sunflorians 可不会喜欢我用这些动物产品做的实验！",
+  "npcDialogues.grimtooth.chore1": "呃啊，这些动物上弄来的新宝物最好得值得等重的黄金！",
+  "npcDialogues.grimtooth.chore2": "海洋在变化，我们掠夺的收成也在变化！",
+  "npcDialogues.grimtooth.chore3": "这些动物产品能在黑市上卖出个高价！",
   "npcDialogues.finn.chore1": "你不会相信我在海里看到的像牛一样的生物的大小！",
   "npcDialogues.finn.chore2": "这些奇怪的目击事件正在影响鱼类。他们表现得很奇怪！",
   "npcDialogues.finn.chore3": "我有迄今为止最大的钓鱼故事 —— 等着你听见！",
@@ -5505,9 +5505,9 @@
   "marketplace.sfl": "FLOWER",
   "marketplace.lastSold": "上次售出时间:{{sfl}} FLOWER",
   "marketplace.howMuch": "你想提供多少 FLOWER？",
-  "marketplace.sflLocked": "FLOWER 安全",
+  "marketplace.sflLocked": "FLOWER 已锁存",
   "marketplace.sflLocked.description": "在优惠有效期间，您的 FLOWER 将安全存放。",
-  "marketplace.sflEscrowed": "{{sfl}} FLOWER 已锁定",
+  "marketplace.sflEscrowed": "{{sfl}} FLOWER 已锁存",
   "marketplace.itemNotStoredOnChain.offer.warning": "您的 FLOWER 需要先存放在链子上，然后才能完成此优惠。",
   "marketplace.itemNotStoredOnChain.purchase.warning": "您的 FLOWER 需要先存放在链子上，然后才能完成此次购买。",
   "promo.expandLand": "扩张两次土地即可获得 100 枚 FLOWER。",
