--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -3763,15 +3763,15 @@
   "npcDialogues.grimtooth.chore1": "呃啊，这些动物上弄来的新宝物最好得值得等重的黄金！",
   "npcDialogues.grimtooth.chore2": "海洋在变化，我们掠夺的收成也在变化！",
   "npcDialogues.grimtooth.chore3": "这些动物产品能在黑市上卖出个高价！",
-  "npcDialogues.finn.chore1": "你不会相信我在海里看到的像牛一样的生物的大小！",
-  "npcDialogues.finn.chore2": "这些奇怪的目击事件正在影响鱼类。他们表现得很奇怪！",
-  "npcDialogues.finn.chore3": "我有迄今为止最大的钓鱼故事 —— 等着你听见！",
+  "npcDialogues.finn.chore1": "你不会相信我在海里看到那像牛一样的东西得有多大！",
+  "npcDialogues.finn.chore2": "这些怪异的景观现象正在影响鱼群。他们表现得很奇怪！",
+  "npcDialogues.finn.chore3": "我有迄今为止最牛的钓鱼故事——就等你来听！",
   "npcDialogues.victoria.chore1": "王国要求对这些新的动物资源进行适当的监管！",
-  "npcDialogues.victoria.chore2": "必须对这些神秘的目击事件进行调查。王冠命令它！",
-  "npcDialogues.victoria.chore3": "确保所有动物产品符合皇家标准，否则将面临后果！",
-  "npcDialogues.gambit.chore1": "想打赌接下来会出现什么生物吗？",
-  "npcDialogues.gambit.chore2": "目击这些奇怪事件的几率是天文数字 —— 我很喜欢！",
-  "npcDialogues.gambit.chore3": "下注接下来会失踪哪只动物！",
+  "npcDialogues.victoria.chore2": "必须针对这些神秘目击事件予以调查。王族已下令！",
+  "npcDialogues.victoria.chore3": "保证好所有动物产品符合皇家标准，否则后果自负！",
+  "npcDialogues.gambit.chore1": "想打赌接下来天上会出现哪种生物吗？",
+  "npcDialogues.gambit.chore2": "要碰上这些奇异事件的概率可是天文数字——我就喜欢！",
+  "npcDialogues.gambit.chore3": "打赌接下来会失踪哪只动物！",
   "npcDialogues.grubnuk.chore2": "有了所有这些新的交易资源，生意正在蓬勃发展！",
   "npcDialogues.grubnuk.chore3": "对于那些知道去哪里看的人来说，奇怪的时代意味着有利可图的交易！",
   "npcDialogues.bert.chore1": "这些神奇的蘑菇也许可以解释天空中的奇怪生物……",
