--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5920,5 +5920,19 @@
   "softBan.telegramInstructions": "Open up the Sunflower Land Bot and run the /verify command.",
   "softBan.openBot": "Open Bot",
   "faceRecognition.mobile": "Having issues?",
-  "faceRecognition.mobile.two": "Try on a mobile device."
+  "faceRecognition.mobile.two": "Try on a mobile device.",
+  "description.easterToken2025": "Hold this for a chance to win $FLOWER after the easter event ends!",
+  "description.easterTicket2025": "Use this in the easter event shop before the event ends!",
+  "description.carrotHouse": "Is this a carrot or a house?",
+  "description.orangeBunnyLantern": "A bunny lantern special to easter",
+  "description.whiteBunnyLantern": "A rare bunny in lantern shape",
+  "description.orangeTunnelBunny": "Who let this dig in my garden!",
+  "description.whiteTunnelBunny": "A rare bunny digging through!",
+  "description.easterBasket2025": "A basket filled with easter eggs!",
+  "event.shop.title": "Easter Event Shop",
+  "event.shop.welcome": "Welcome to the Easter Event Shop. During the event you will be able to use Easter Tokens earned on the portal you can find in this island to buy a variety of items! ",
+  "easter-eggstravaganza.portal.title": "Minigame - Easter Eggstravaganza",
+  "easter-eggstravaganza.portal.description": "Collect the eggs before they fall. Can you save the easter eggs?",
+  "easter-eggstravaganza.portal.missionObjectives": "Mission: Reach {{targetScore}}.",
+  "easter-eggstravaganza.portal.rewardMessage": "Congratulations, you completed the mission! Here is your reward."
 }
