--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -1724,7 +1724,7 @@
   "rules.termsOfService": "服务条款",
   "season.access": "你可以享受：",
   "season.banner": "时季旗帜",
-  "season.bonusTickets": "完成交付后额外获得 2 张时季票券。",
+  "season.bonusTickets": "完成送货后额外获得 2 张时季票券。",
   "season.boostXP": "食物进食经验 +10%。",
   "season.buyNow": "立刻购买",
   "season.exclusiveOffer": "独家特供！",
@@ -1990,7 +1990,7 @@
   "description.oceansOlive": "海滨橄榄。怡人海滨菜，Sunflorian 名菜。",
   "description.quickJuice": "速榨汁。充能一瞬间，Goblin 精选。",
   "description.riceBun": "饭团/软糯饭团人人爱。",
-  "description.slowJuice": "精榨汁。营养果汁，Bumpkin 手艺。",
+  "description.slowJuice": "慢工榨汁。营养果汁，Bumpkin 手艺。",
   "description.steamedRedRice": "蒸红米。完美蒸红米，Bumpkin 常欢喜。",
   "description.sushiRoll": "寿司卷。美味寿司卷，匠人精手艺。",
   "description.theLot": "杂果汁。美味杂果汁，解渴又营养。",
@@ -2579,7 +2579,7 @@
   "npcDialogues.timmy.negativeDelivery4": "哦，太可惜了！看来你没有我要找的物品。但是别气馁；新的机会就在眼前。",
   "npcDialogues.timmy.negativeDelivery5": "哦，干……萝卜！你没有我要找的东西。但别担心，我的朋友。继续探索，你找到时我们会好好庆祝的！",
   "npcDialogues.timmy.noOrder1": "哦，你好呀！我现在没有生效订单要给你，但我一直渴望多学习多听故事。你有在 Sunflorea 冒险的精彩故事吗？或许你碰到过一位新的熊熊朋友？说来听听！",
-  "npcDialogues.timmy.noOrder2": "目前我没有具体的订单需要配送，但这也不能阻止我的好奇心！你有你旅行的有趣故事吗？也许你遇到了一头稀有的熊，或者在 Sunflorea 里发现了一颗隐藏珠宝？聊一聊吧！",
+  "npcDialogues.timmy.noOrder2": "目前我没有具体的订单需要送货，但这也不能阻止我的好奇心！你有你旅行的有趣故事吗？也许你遇到了一头稀有的熊，或者在 Sunflorea 里发现了一颗隐藏珠宝？聊一聊吧！",
   "npcDialogues.cornwell.intro1": "致意，年轻的冒险家！你带上我要找的物品来了吗？",
   "npcDialogues.cornwell.intro2": "啊，欢迎，探寻知识和文物之人！你有我想要的物品吗？让我看看你都有什么。",
   "npcDialogues.cornwell.intro3": "踏入古老秘密与智慧的世界。你拿到我想要的物品了吗？小伙子，和我分享你的发现。",
@@ -2643,7 +2643,7 @@
   "npcDialogues.betty.averageFlower": "不完全是我期待的那朵，但是很可爱。谢谢。",
   "npcDialogues.betty.badFlower": "这不是我想的那朵。你能试着找一朵更合适的花吗？",
   "npcDialogues.betty.goodFlower": "这朵三色堇很漂亮！谢谢你把它带给我。",
-  "npcDialogues.blacksmith.reward": "非常感谢您的配送。这里有一些值得你努力的东西。",
+  "npcDialogues.blacksmith.reward": "非常感谢您的送货。这里有一些值得你努力的东西。",
   "npcDialogues.blacksmith.flowerIntro": "我需要一朵鲜艳的红康乃馨。你碰上过一朵吗？",
   "npcDialogues.blacksmith.averageFlower": "不完全是我希望的那朵，但也很不错。谢谢。",
   "npcDialogues.blacksmith.badFlower": "这朵花不太对。你能找一朵更合适的吗？",
@@ -2658,12 +2658,12 @@
   "npcDialogues.finn.averageFlower": "不完全是我希望的那朵，但也很让我高兴。谢谢。",
   "npcDialogues.finn.badFlower": "这朵花不太符合我的期望。也许再试一次？",
   "npcDialogues.finn.goodFlower": "这朵波斯菊太棒了！谢谢你把它带给我。",
-  "npcDialogues.finley.reward": "感谢你的努力。这里是对配送的小小感激、不成敬意。",
+  "npcDialogues.finley.reward": "感谢你的努力。这里是对送货的小小感激、不成敬意。",
   "npcDialogues.finley.flowerIntro": "一朵可爱的水仙花，比如我正在想念那朵，能叫我生活光明百倍。你有看见吗？",
   "npcDialogues.finley.averageFlower": "虽然不完全是我想的那朵，但非常迷人。谢谢。",
   "npcDialogues.finley.badFlower": "这朵花不太对。也许换一个更合适？",
   "npcDialogues.finley.goodFlower": "这朵水仙花真漂亮！谢谢你把它带给我。",
-  "npcDialogues.corale.reward": "非常感谢您的配送。这里有小小薄礼以示我感激之情。",
+  "npcDialogues.corale.reward": "非常感谢您的送货。这里有小小薄礼以示我感激之情。",
   "npcDialogues.corale.flowerIntro": "你可曾见过光芒四射的棱晶瓣花吗？简直太迷人了……",
   "npcDialogues.corale.averageFlower": "不完全是我希望的那朵，但也非常令人欣喜。谢谢。",
   "npcDialogues.corale.badFlower": "这不完全是我想的那朵。你能找到更合适的花吗？",
@@ -2688,7 +2688,7 @@
   "npcDialogues.cornwell.averageFlower": "不完全是我期望的花，但它很迷人。谢谢。",
   "npcDialogues.cornwell.badFlower": "这朵花不太对。也许还需要再找一回？",
   "npcDialogues.cornwell.goodFlower": "这朵桔梗花真令人愉快！谢谢你把它带给我。",
-  "npcDialogues.tywin.reward": "感谢你的配送。以下就是对你努力的回谢。",
+  "npcDialogues.tywin.reward": "感谢你的送货。以下就是对你努力的回谢。",
   "npcDialogues.tywin.flowerIntro": "你听说过精美的报春帘花或迷人的天霜花吗？我需要一个。",
   "npcDialogues.tywin.averageFlower": "不完全是我所希望的，但还算乐见。谢谢。",
   "npcDialogues.tywin.badFlower": "这朵花不太对。也许再换一个来更合适？",
@@ -3258,7 +3258,7 @@
   "animals.guide.one": "Sunflower Land 的鸡是您农场中心旷神怡的附属，也是鸡蛋的来源，可用于各种食谱和锻造。要从小鸡开始，您需要达到乡包佬第 6 级并建造鸡舍。自此，你可以选择购买鸡或放置已经拥有的鸡。只需单击 “放置” 按钮，将它们拖放到您的农场中，就像放置建筑物一样。在标准农场中，每个鸡舍最多可容纳 10 只鸡，如果您拥有 Chicken Coop 收藏品，则此限制将延长至 15 只。",
   "crafting.guide.two": "要开始锻造物品，请点击农场上的工作台，然后选择锻造选项卡。目前那里有一个基础稻草人，它可以提高向日葵、土豆和南瓜等低阶庄稼的生长速度。这是一笔不错的交易，需要用您的资源换成稻草人。获得后，将其放在要增强的地块上方。",
   "crafting.guide.three": "农民可以通过点击游戏右上角的白手图标进入设计模式，在这种模式下，您可以在农场上战略部署放置物品并重新布置资源，以优化其布局并增强其视觉效果。这一步对于最大限度地提高精心锻造装备的效率至关重要。例如，将 Bale 放置在您想要增强的鸡群附近。此外，可以考虑购买装饰品，为您的土地增添魅力和整洁感。",
-  "deliveries.guide.one": "Sunflower Land 的送货提供了一个激动人心的机会，可以帮助饥饿的哥布林和其他乡包佬，同时获得奖励。每天您都可以通过点击屏幕左下角的 Codex 图标，然后单击 “配送” 选项卡来查看所有订单。这些订单是由一些 NPC 下的，这些人可以在南瓜广场和其他一些区域找到。要完成订单，请点击左下角的世界图标或法典中的 “前往目的地” 按钮，然后出发，寻找等待送货的 NPC。找到他们后，点击他们交付订单并获得奖励。",
+  "deliveries.guide.one": "Sunflower Land 的送货提供了一个激动人心的机会，可以帮助饥饿的哥布林和其他乡包佬，同时获得奖励。每天您都可以通过点击屏幕左下角的 Codex 图标，然后单击 “送货” 选项卡来查看所有订单。这些订单是由一些 NPC 下的，这些人可以在南瓜广场和其他一些区域找到。要完成订单，请点击左下角的世界图标或法典中的 “前往目的地” 按钮，然后出发，寻找等待送货的 NPC。找到他们后，点击他们交付订单并获得奖励。",
   "scavenger.guide.one": "在 Sunflower Land 搜刮物品为发现隐藏的宝藏和锻造贵重物品提供了令人兴奋的机会。搜刮的第一个选项是在挖掘区挖宝，在那里你可以成为海盗寻宝者。通过冒险前往这个位于海滩北部的区域、在 Jafar 的商店锻造沙铲或沙钻，您可以在沙地挖掘以发现各种宝藏。",
   "scavenger.guide.two": "另一种选项的搜刮是收集野生和魔法蘑菇，这些蘑菇会自然出现在您的农场和周围的岛屿上。这些蘑菇可以被免费收集并用于食谱、任务和物品锻造。留意这些蘑菇，因为它们以不同的间隔补充。野生蘑菇每 16 小时刷新一次，您的农场最多只能生成 5 个野生蘑菇。在新手岛上，魔法蘑菇每 48 小时刷新一次，在春花岛上每 36 小时刷新一次，在沙漠岛上每隔 24 小时刷新一次，农场上最多可补充 3 个魔法蘑菇。如果您的土地已满，蘑菇就会出现在周围的岛屿上，确保您没有错过这些宝贵的资源。",
   "fruit.guide.two": "要种植水果，您需要获得更大的水果树坑，需要升级到春花岛后方可获取。",
@@ -3417,7 +3417,7 @@
   "description.mog": "一个懒散的 Morchi。",
   "raffle.entry": "投注",
   "guide.factionPet.four": "一旦帮派达到 2 周或更长时间的连胜纪录，每位贡献认证的帮派成员在乡包佬吃东西时都会获得经验值加成！",
-  "guide.factionPet.six": "每交付一份食物，您都将获得徽记。每次交付奖励都会减少。这些奖励将每天重置。拥有纹章奖励的玩家将根据其帮派奖励阶衔获得额外奖励。",
+  "guide.factionPet.six": "每喂食一份食物，您都将获得徽记。每次喂食奖励都会减少。这些奖励将每天重置。拥有纹章奖励的玩家将根据其帮派奖励阶衔获得额外奖励。",
   "animal": "动物",
   "animals.buyAnimal": "购买动物",
   "animals.buildingIsFull": "{{buildingName}} 已满！",
@@ -3833,7 +3833,7 @@
   "eggcellentCollection.description": "收集鸡蛋 10 次",
   "skill.youngFarmer": "+0.1 基本作物产量",
   "skill.experiencedFarmer": "+0.1 中阶庄稼产量",
-  "skill.bettysFriend": "Betty Coin 的交付收入增长了 30%",
+  "skill.bettysFriend": "Betty Coin 的送货收入增长了 30%",
   "marketplace": "市场",
   "marketplace.buy": "买入、交换、卖出！",
   "marketplace.item": "物品",
@@ -3852,7 +3852,7 @@
   "marketplace.totalTrades": "总交易数",
   "marketplace.walletsHoldingCollectibles": "持有收藏品的钱包数",
   "restock.itemsToRestock": "以下数量的物品将被补货到商店的现有库存中：",
-  "restock.shipmentArrived": "您的每日免费配送已到达！",
+  "restock.shipmentArrived": "您的每日免费补货已到达！",
   "marketplace.sold": "已售出",
   "marketplace.sellerWillReceive": "卖家将收到",
   "bumpkinTrade.maxListings": "已达到最大活跃挂单数",
@@ -3977,13 +3977,13 @@
   "description.festiveToyTrain": "一个特殊的雪人，由于某种原因永远不会融化！？",
   "marketplace.available": "可用：{{count}}",
   "bumpkinItemBuff.angler.waders.boost": "+10 每日钓鱼上限",
-  "skill.strongRoots": "-10% 作物生长时间提前",
+  "skill.strongRoots": "-10% 高阶庄稼生长时间",
   "skill.acreFarm.buff": "+1 高阶庄稼产量",
   "skill.acreFarm.debuff": "-0.5 低阶和中阶庄稼产量",
   "skill.hectareFarm.buff": "+1 低阶和中阶庄稼产量",
   "skill.hectareFarm.debuff": "-0.5 高阶庄稼产量",
   "skill.fruityHeaven": "-10% 水果种子成本",
-  "skill.fruityProfit": "+50% 来自 Tango's 交付的金币",
+  "skill.fruityProfit": "+50% 来自 Tango 送货的金币",
   "skill.loyalMacaw": "双金刚鹦鹉的效果",
   "skill.fruityWoody": "+1 根来自果枝和茎的木头",
   "skill.pearTurbocharge": "双重不朽梨的效果",
@@ -4020,7 +4020,7 @@
   "skill.sheepwiseDiet.debuff": "+50% 用于喂养其他动物的饲料",
   "skill.cowSmartNutrition.buff": "-25% 喂养奶牛的饲料",
   "skill.cowSmartNutrition.debuff": "+50% 用于喂养其他动物的饲料",
-  "skill.victoriasSecretary": "+50% 来自 Victoria's 配送的金币",
+  "skill.victoriasSecretary": "+50% 来自 Victoria 配送的金币",
   "skill.oliveExpress": "-10% 橄榄生长时间",
   "skill.riceRocket": "-10% 水稻生长时间",
   "skill.vineVelocity": "-10% 葡萄生长时间",
@@ -4029,7 +4029,7 @@
   "skill.ironBumpkin": "+0.1 铁矿产量",
   "skill.speedMiner": "-20% 石脉恢复时间",
   "skill.tapProspector": "每颗小型矿脉只需点击 1 下进行开采",
-  "skill.forgeWardProfits": "+20% 铁匠配送收入",
+  "skill.forgeWardProfits": "+20% 铁匠送货收入",
   "skill.ironHustle": "-30% 铁脉恢复时间",
   "skill.rockyFavor.buff": "+1 石头产量",
   "skill.rockyFavor.debuff": "-0.5 铁矿产量",
@@ -4150,7 +4150,7 @@
   "mayor.plaza.goodbye": "好吧，好吧 {{text}}。",
   "mayor.plaza.bye": "再见",
   "mayor.plaza.haveFun": "我最好回去工作。尽情探索吧！",
-  "world.intro.one": "你好 Bumpkin，欢迎来到南瓜广场。在这里，来自世界各地的 Bumpkins 聚集在一起进行交易、完成交付和玩迷你游戏。",
+  "world.intro.one": "你好 Bumpkin，欢迎来到南瓜广场。在这里，来自世界各地的 Bumpkins 聚集在一起进行交易、完成送货和玩迷你游戏。",
   "instantCook.finish": "立即完成",
   "mayor": "市长",
   "mayor.plaza.shortIntro": "嘿 Bumpkin，我是这个城镇的市长而且",
@@ -4262,7 +4262,7 @@
   "vip.access": "VIP 访问权限",
   "vip.benefit.airdrop": "每月空投",
   "vip.benefit.expBoost": "10% 经验值提升",
-  "vip.benefit.bonusDelivery": "奖励配送和琐事奖励",
+  "vip.benefit.bonusDelivery": "额外送货和农活奖励",
   "vip.benefit.reputation": "{{points}} 声誉积分",
   "vip.benefit.competition": "奖励比赛积分 + 更多！",
   "gameOptions.notifications": "通知",
@@ -4320,14 +4320,14 @@
   "skill.chonkyScarecrow": "将基础稻草人的效果区域 (AOE) 增加到 7x7 区域；低阶庄稼生长时间额外增加 -10%",
   "skill.horrorMike": "将 Scary Mike 的效果区域 (AOE) 增加到 7x7 区域；中阶庄稼产量增加 +0.1",
   "skill.lauriesGains": "将 Chuckle Crow Laurie 的效果区域 (AOE) 增加到 7x7 区域；额外增加 +0.1 高阶庄稼产量",
-  "skill.fishyFortune": "+100% 来自 Corale 配送的金币",
+  "skill.fishyFortune": "+100% 来自 Corale 送货的金币",
   "skill.midasSprint": "-10% 金脉恢复时间",
   "skill.midasRush": "-20% 金脉恢复时间",
-  "doubleDelivery.specialEvent": "特别活动-双重配送",
+  "doubleDelivery.specialEvent": "特别活动-双酬送货",
   "doubleDelivery.one": "今天是一个特别的日子！送货值得双重奖励。",
-  "doubleDelivery.two": "只有每个 bumpkin 或 goblin 当天首次交付的商品才能获得双倍奖励。",
-  "calendar.events.doubleDelivery.title": "双重配送",
-  "calendar.events.doubleDelivery.description": "一项特殊活动，您可以通过交付获得双倍奖励。",
+  "doubleDelivery.two": "只有每个 bumpkin 或 goblin 当天首次送货的商品才能获得双倍奖励。",
+  "calendar.events.doubleDelivery.title": "双酬送货",
+  "calendar.events.doubleDelivery.description": "一项特殊活动，您可以通过送货获得双倍奖励。",
   "description.rhubarb": "一种酸味浓郁的蔬菜！",
   "description.zucchini": "非常适合做沙拉和炒菜。",
   "description.yam": "一种含淀粉的根茎类蔬菜",
@@ -4466,7 +4466,7 @@
   "visiting.farmId": "访问 # {{farmId}}",
   "world.infernos": "沃尔卡罗",
   "island.required": "升级到 {{island}}",
-  "whatsOn.auction.tickets": "本周没有从琐事和赏金中抽出时间。",
+  "whatsOn.auction.tickets": "本周没有农活和赏金的“时光裂片”奖励。",
   "whatsOn.windsOfChange": "风云变幻",
   "whatsOn.march31st": "3 月 31 日",
   "whatsOn.february3rd": "2 月 3 日",
@@ -5118,9 +5118,9 @@
   "recipes.queue": "队列",
   "recipes.vipCookingQueue": "成为 VIP 会员，解锁一次烹饪多达 4 个食谱的能力！立即升级，为您的烹饪锦上添花。",
   "recipes.confirmAddToQueue": "您确定要将 {{recipe}} 添加到队列中吗？",
-  "whatsOn.ticketPaused": "Bumpkins 正在度假 —— 再也不需要从琐事和赏金中抽出时间了。",
-  "whatsOn.mysterySeasonText2": "再也不用在配送时间上了。",
-  "whatsOn.mysterySeasonText3": "挖掘时再也不会有古钟了",
+  "whatsOn.ticketPaused": "Bumpkins 正在度假 —— 不提供“时光裂片”的农活和赏金间了。",
+  "whatsOn.mysterySeasonText2": "无“时光裂片”送货了。",
+  "whatsOn.mysterySeasonText3": "无“古钟”挖宝道具了",
   "skill.frugalMiner": "所有镐的金币消耗 -20%",
   "powerSkills.nextUse": "下次使用技能 {{time}}",
   "recipes.confirmCancel": "你确定要从队列中删除这个 {{recipe}} 吗？",
@@ -5131,7 +5131,7 @@
   "restrictionReason.hasBonusAnimals.barn": "谷仓",
   "restrictionReason.hasBonusAnimals.henHouse": "鸡舍",
   "description.igloo": "外面很冷，里面很舒服——家的甜蜜冰冻家。在《风云变幻》章节中，来自 “送货、家务和赏金” 的 +1 Timeshard。",
-  "description.hammock": "在微风中轻轻摇摆，享受来之不易的休息。在《风云变幻》章节中，从 “交付、琐事和赏金” 中获得 +1 Timeshard。",
+  "description.hammock": "在微风中轻轻摇摆，享受来之不易的休息。在《风云变幻》章节中，从 “送货、农活和赏金” 中获得 +1 Timeshard。",
   "reputation.sprout.description": "每天 1 份商城清单",
   "reputation.seedling.trades": "每天 2 个商城清单",
   "reputation.grower.trades": "每天 3 个商城清单",
@@ -5385,8 +5385,8 @@
   "socialTask.linkTelegram.description": "将你的 Telegram 关联到你的账户",
   "socialTask.upgradeToPetalParadise": "升级到花瓣天堂",
   "socialTask.upgradeToPetalParadise.description": "全面扩大您的土地并升级到花瓣天堂",
-  "socialTask.complete50Deliveries": "完成 50 次配送",
-  "socialTask.complete50Deliveries.description": "前往广场与各种 NPC 一起完成配送 50 次",
+  "socialTask.complete50Deliveries": "完成 50 次送货",
+  "socialTask.complete50Deliveries.description": "前往广场与各种 NPC 一起完成送货 50 次",
   "claimReferralRewards.title": "推荐奖励",
   "claimReferralRewards.description": "恭喜！{{totalUnclaimedReferrals}} 新玩家已加入并使用您的推荐链接购买了VIP。这是你的奖励！",
   "referral.vip": "朋友购买 VIP 时获得 25 个爱心护符",
@@ -5471,13 +5471,13 @@
   "bumpkinBillionaire.description": "赚取 5,000 枚 FLOWER",
   "bigSpender.description": "消費 10 枚 FLOWER",
   "highRoller.description": "消费 7,500 枚 FLOWER",
-  "deliveryDynamo.two": "通过完成配送，你会让他们开心，并获得一些超棒的 FLOWER 奖励作为回报",
+  "deliveryDynamo.two": "通过完成送货，你会让他们开心，并获得一些超棒的 FLOWER 奖励作为回报",
   "addSFL.minimumReceived": "最低收到量：{{sflReceived}} FLOWER",
   "bumpkin.delivery.earnSFL": "赚取 FLOWER 来交易和建立你的帝国。",
-  "bumpkinItemBuff.bumpkin.crown.boost": "+25% FLOWER 和金币配送",
-  "bumpkinItemBuff.goblin.crown.boost": "+25% FLOWER 和金币配送",
-  "bumpkinItemBuff.nightshade.crown.boost": "+25% FLOWER 和金币配送",
-  "bumpkinItemBuff.sunflorian.crown.boost": "+25% FLOWER 和金币配送",
+  "bumpkinItemBuff.bumpkin.crown.boost": "+25% FLOWER 和金币送货奖励",
+  "bumpkinItemBuff.goblin.crown.boost": "+25% FLOWER 和金币送货奖励",
+  "bumpkinItemBuff.nightshade.crown.boost": "+25% FLOWER 和金币送货奖励",
+  "bumpkinItemBuff.sunflorian.crown.boost": "+25% FLOWER 和金币送货奖励",
   "description.michelin.stars": "高品质的食物，额外赚取 5% 的 FLOWER",
   "bumpkinTrade.sell": "向其他玩家出售你的资源以换取 FLOWER。",
   "bumpkinTrade.floorPrice": "底价：{{price}} FLOWER",
@@ -5491,10 +5491,10 @@
   "faction.donation.request.message": "问候，{{faction}}！我们目前正在接受资源和FLOWER的捐赠，以帮助建立我们的派系。你将获得派系积分奖励，以换取你的慷慨捐助。",
   "faction.donation.sfl": "捐赠 FLOWER（最少 10 分钟）",
   "faction.cost": "表现出你的忠诚并加入 {{faction}}。进入该派系的费用为 {{cost}} FLOWER。",
-  "description.factionShop.goblinCrown": "带有发光宝石的深色锯齿状皇冠，非常适合哥布林之王。在 FLOWER 和金币配送中获得 25% 的奖励，向该阵营承诺时获得 +10% 的分数。此物品的倍数不能叠加。",
-  "description.factionShop.sunflorianCrown": "雄伟的皇冠上装饰着光芒四射的红宝石中央装饰和金色装饰，唤起了领导者的宏伟和权威。在 FLOWER 和金币配送中获得 25% 的奖励，向该阵营承诺时获得 +10% 的分数。此物品的倍数不能叠加。",
-  "description.factionShop.bumpkinCrown": "一款设计精巧、游戏发光怪异的魔法皇冠，适合 Bumpkin 领袖。在 FLOWER 和金币配送中获得 25% 的奖励，向该阵营承诺时获得 +10% 的分数。此物品的倍数不能叠加。",
-  "description.factionShop.nightshadeCrown": "一款带有深紫色和银色细节的午夜黑色皇冠，适合一位尊敬和神秘的领导者。在 FLOWER 和金币配送中获得 25% 的奖励，向该阵营承诺时获得 +10% 的分数。此物品的倍数不能叠加。",
+  "description.factionShop.goblinCrown": "带有发光宝石的深色锯齿状皇冠，非常适合哥布林之王。在 FLOWER 和金币送货中获得 25% 的奖励，向该阵营承诺时获得 +10% 的分数。此物品的倍数不能叠加。",
+  "description.factionShop.sunflorianCrown": "雄伟的皇冠上装饰着光芒四射的红宝石中央装饰和金色装饰，唤起了领导者的宏伟和权威。在 FLOWER 和金币送货中获得 25% 的奖励，向该阵营承诺时获得 +10% 的分数。此物品的倍数不能叠加。",
+  "description.factionShop.bumpkinCrown": "一款设计精巧、游戏发光怪异的魔法皇冠，适合 Bumpkin 领袖。在 FLOWER 和金币送货中获得 25% 的奖励，向该阵营承诺时获得 +10% 的分数。此物品的倍数不能叠加。",
+  "description.factionShop.nightshadeCrown": "一款带有深紫色和银色细节的午夜黑色皇冠，适合一位尊敬和神秘的领导者。在 FLOWER 和金币送货中获得 25% 的奖励，向该阵营承诺时获得 +10% 的分数。此物品的倍数不能叠加。",
   "gameOptions.blockchainSettings.swapPOLForSFL": "将 POL 换成 FLOWER",
   "dailyLim": "每日 FLOWER 限额",
   "no.sfl": "未找到 FLOWER 代币",
@@ -5522,7 +5522,7 @@
   "withdraw.sfl.available": "FLOWER 可在链上使用",
   "withdraw.receive": "您将收到：{{sflReceived}} 枚 FLOWER",
   "withdraw.taxFree": "哥布林会根据游戏中获得的 FLOWER 向你征税。这不包括存款和市场。",
-  "world.intro.visit": "拜访 NPC 并完成配送，获得 FLOWER、金币和稀有奖励。",
+  "world.intro.visit": "拜访 NPC 并完成送货，获得 FLOWER、金币和稀有奖励。",
   "description.skills.liquidityProvider": "FLOWER 提款费减免 50%",
   "merkl.introducing.two": "一种通过支持生态系统获得 FLOWER 的全新改进方式。",
   "competition.prizes.two": "50,000 个 FLOWER 奖池。",
@@ -5561,14 +5561,14 @@
   "socialTask.referFriend.description": "使用您的推荐链接推荐朋友加入游戏——仅限第一次！一旦你的第一个朋友使用你的推荐链接，25个爱情符就会被空投给你。",
   "socialTask.joinStream": "加入我们的每周直播，获取 alpha 版、更新和赠品！",
   "announcement.exchangeLoveCharms": "在 Love Pool 使用爱心护符兑换 $FLOWER！",
-  "news.loveRush": "Love Rush 将于 4 月 7 日开始",
+  "news.loveRush": "“淘心热”活动将于 4 月 7 日开始",
   "news.loveRush.description": "与 Bumpkins 比赛赢取爱心护符-兑换奖品和 FLOWER ！",
   "socialTask.discord": "加入 Discord 社区并获得奖励。",
   "socialTask.telegram": "连接您的 Telegram，获取提醒并获得奖励。",
   "socialTask.twitter": "关注我们的推特获取奖品。",
   "socialTask.helpBumpkins": "完成 Bumpkins 的任务以获得爱心护符。",
-  "taskBoard.loveRush": "Love Rush",
-  "taskBoard.limitedTimeDescription": "在限定时间内，完成 Bumpkin 配送、家务和礼物，即可获得爱心护符！",
+  "taskBoard.loveRush": "淘心热",
+  "taskBoard.limitedTimeDescription": "在限定时间内，完成 Bumpkin 送货、家务和礼物，即可获得爱心护符！",
   "taskBoard.howToEarn": "如何获取？",
   "taskBoard.earnDescription": "完成任务即可获得爱心护符和奖励。",
   "taskBoard.left": "剩余",
@@ -5577,16 +5577,16 @@
   "streams.discord": "Discord",
   "streams.twitch": "Twitch",
   "loveRush.dateRange": "4 月 7 日至 5 月 4 日",
-  "loveRush.description": "在 Love Rush 期间，帮助 Bumpkin NPC 并获得爱心护符！",
-  "loveRush.deliveries": "为 Love Charms 进行 Bumpkin 配送",
-  "loveRush.chores": "完成琐事并获得爱心护符",
+  "loveRush.description": "在“淘心热”期间，帮助 Bumpkin NPC 并获得爱心护符！",
+  "loveRush.deliveries": "进行乡包佬送货，赢取爱心护符",
+  "loveRush.chores": "完成农活并获得爱心护符",
   "loveRush.giftFlowers": "赠送鲜花以获得额外的爱心护符",
-  "announcement.loveRush": "Love Rush 活动已经开始！加入庆祝活动吧！",
-  "loveRush.dailyStreak": "与 NPC 保持每日交付记录，通过交付获得额外的爱心护符",
+  "announcement.loveRush": "“淘心热”活动已经开始！加入庆祝活动吧！",
+  "loveRush.dailyStreak": "与 NPC 保持每日送货记录，通过送货获得额外的爱心护符",
   "loveRush.treasureChest": "领取每日奖励时可获得额外的 15 个爱心护符！",
-  "loveRush.eventTime": "Love Rush 活动剩余 - {{time}}",
+  "loveRush.eventTime": "“淘心热”活动还剩：{{time}}",
   "loveRush.choreBonus": "一周内完成 21 个杂务，即可获得 100 个爱心护符！",
-  "loveRush.deliveryStreakBonus": "Love Rush 奖励：{{loveCharmReward}} 爱心护符",
+  "loveRush.deliveryStreakBonus": "“淘心热”奖励：{{loveCharmReward}} 爱心护符",
   "description.floralArch": "这座宏伟的入口由大自然的精华构成，欢迎所有经过的人。",
   "description.flowerCoin": "象征着新起点，标志着 Sunflower Land 开启了一个新时代。",
   "description.flowerStatue": "一座成长和转型的丰碑，在 Bumpkins 的世界以新的象征蓬勃发展之际高高耸立",
@@ -5618,7 +5618,7 @@
   "rewardShop.wearable": "不错的购买！您的新可穿戴设备可以安全地存放在衣柜里。你可以从那里把它装备成小伙子。",
   "rewardShop.collectible": "不错的购买！您的新收藏品安全地存储在库存中。",
   "rewards.daily.description": "奖励资源、金币和 {{ticket}}",
-  "loveRush.referral": "在 Love Rush 期间，VIP 推荐将奖励 200 个爱心护符",
+  "loveRush.referral": "在“淘心热”期间，VIP 推荐将奖励 200 个爱心护符",
   "telegram.prompts": "按照 Telegram 中的提示开始操作。",
   "flower.exchange.inventory": "库存：{{loveCharmCount}}",
   "flower.exchange.dailyLimit": "每日限额：{{loveCharmsSpent}}/{{dailyLimit}}",
@@ -5670,8 +5670,8 @@
   "islandupgrade.empty.beehives": "蜂箱已无蜂蜜",
   "islandupgrade.ready.crimstoneRocks": "猩红宝石已准备就绪",
   "islandupgrade.ready.oilReserves": "石油已准备就绪",
-  "whatsOn.loveRush": "Love Rush",
-  "whatsOn.loveRushText": "Love Rush 活动已经开始！参加庆祝活动并获得 $FLOWER！",
+  "whatsOn.loveRush": "“淘心热”",
+  "whatsOn.loveRushText": "“淘心热”活动已经开始！参加庆祝活动并获得 $FLOWER！",
   "goblinMarket.thanks": "感谢您提供的所有资源。哥布林市场现已关闭",
   "thanks": "谢谢",
   "description.hoot": "哈哈哈哈！你解开了我的谜语吗？",
