--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5558,9 +5558,9 @@
   "flower.exchange.error.balance": "你没有足够的爱心护符来兑换 $FLOWER",
   "flower.exchange.button": "交易所",
   "flower.exchange.youWillReceive": "您将收到：",
-  "socialTask.referFriend.description": "使用您的推荐链接推荐朋友加入游戏——仅限第一次！一旦你的第一个朋友使用你的推荐链接，25个爱情符就会被空投给你。",
+  "socialTask.referFriend.description": "使用您的推荐链接推荐朋友加入游戏——仅限第一次！一旦你的第一个朋友使用你的推荐链接，25个爱心护符就会被空投给你。",
   "socialTask.joinStream": "加入我们的每周直播，获取 alpha 版、更新和赠品！",
-  "announcement.exchangeLoveCharms": "在 Love Pool 使用爱心护符兑换 $FLOWER！",
+  "announcement.exchangeLoveCharms": "在爱心池使用爱心护符兑换 $FLOWER！",
   "news.loveRush": "“淘心热”活动将于4月7日开始",
   "news.loveRush.description": "与 Bumpkins 比赛赢取爱心护符-兑换奖品和鲜花！",
   "socialTask.discord": "加入 Discord 社区并获得奖励。",
