[FIX] Various small fixes

--- a/src/lib/i18n/dictionaries/en.json
+++ b/src/lib/i18n/dictionaries/en.json
@@ -5755,8 +5755,8 @@
   "softBan.openBot": "Open Bot",
   "faceRecognition.mobile": "Having issues?",
   "faceRecognition.mobile.two": "Try on a mobile device.",
-  "description.easterToken2025": "Hold this for a chance to win $FLOWER after the easter event ends!",
-  "description.easterTicket2025": "Use this in the easter event shop before the event ends!",
+  "description.easterToken2025": "Use this in the easter event shop before the event ends!",
+  "description.easterTicket2025": "Hold this for a chance to win $FLOWER after the easter event ends!",
   "description.carrotHouse": "Is this a carrot or a house?",
   "description.orangeBunnyLantern": "A bunny lantern special to easter",
   "description.whiteBunnyLantern": "A rare bunny in lantern shape",
