--- a/src/lib/i18n/dictionaries/fr.json
+++ b/src/lib/i18n/dictionaries/fr.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "Accédez au canal #verify et saisissez la commande /verify.",
   "faceRecognition.mobile": "Vous rencontrez des problèmes ?",
   "faceRecognition.mobile.two": "Essayez sur un appareil mobile.",
-  "description.easterToken2025": "Gardez-le pour avoir une chance de gagner $FLOWER après la fin de l'événement de Pâques !",
-  "description.easterTicket2025": "Utilisez-le dans la boutique de l'événement de Pâques avant la fin de l'événement !",
+  "description.easterToken2025": "Utilisez-le dans la boutique de l'événement de Pâques avant la fin de l'événement !",
+  "description.easterTicket2025": "Gardez-le pour avoir une chance de gagner $FLOWER après la fin de l'événement de Pâques !",
   "description.carrotHouse": "S'agit-il d'une carotte ou d'une maison ?",
   "description.orangeBunnyLantern": "Une lanterne en forme de lapin spéciale pour Pâques",
   "description.whiteBunnyLantern": "Un lapin rare en forme de lanterne",
