--- a/src/lib/i18n/dictionaries/id.json
+++ b/src/lib/i18n/dictionaries/id.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "Kunjungi saluran #verify dan ketik perintah /verify.",
   "faceRecognition.mobile": "Mengalami masalah?",
   "faceRecognition.mobile.two": "Coba di perangkat seluler.",
-  "description.easterToken2025": "Tahan ini untuk kesempatan memenangkan $FLOWER setelah acara Paskah berakhir!",
-  "description.easterTicket2025": "Gunakan ini di toko acara paskah sebelum acara berakhir!",
+  "description.easterToken2025": "Gunakan ini di toko acara paskah sebelum acara berakhir!",
+  "description.easterTicket2025": "Tahan ini untuk kesempatan memenangkan $FLOWER setelah acara Paskah berakhir!",
   "description.carrotHouse": "Apakah ini wortel atau rumah?",
   "description.orangeBunnyLantern": "Lentera kelinci khusus untuk Paskah",
   "description.whiteBunnyLantern": "Kelinci langka dalam bentuk lentera",
