--- a/src/lib/i18n/dictionaries/it.json
+++ b/src/lib/i18n/dictionaries/it.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "Visita il canale #verify e digita il comando /verify.",
   "faceRecognition.mobile": "Hai problemi?",
   "faceRecognition.mobile.two": "Prova su un dispositivo mobile.",
-  "description.easterToken2025": "Tienilo in mano per avere la possibilità di vincere $FLOWER dopo la fine dell'evento di Pasqua!",
-  "description.easterTicket2025": "Usalo nel negozio degli eventi di Pasqua prima che l'evento finisca!",
+  "description.easterToken2025": "Usalo nel negozio degli eventi di Pasqua prima che l'evento finisca!",
+  "description.easterTicket2025": "Tienilo in mano per avere la possibilità di vincere $FLOWER dopo la fine dell'evento di Pasqua!",
   "description.carrotHouse": "È una carota o una casa?",
   "description.orangeBunnyLantern": "Una lanterna a forma di coniglio speciale per Pasqua",
   "description.whiteBunnyLantern": "Un raro coniglietto a forma di lanterna",
