--- a/src/lib/i18n/dictionaries/ja.json
+++ b/src/lib/i18n/dictionaries/ja.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "#verify チャンネルにアクセスして /verify コマンドを入力します。",
   "faceRecognition.mobile": "問題がありますか？",
   "faceRecognition.mobile.two": "モバイルデバイスで試してください。",
-  "description.easterToken2025": "これを持っていると、イースターイベント終了後に$FLOWERが当たるチャンスがあります！",
-  "description.easterTicket2025": "イベント終了前にイースターイベントショップで使おう！",
+  "description.easterToken2025": "イベント終了前にイースターイベントショップで使おう！",
+  "description.easterTicket2025": "これを持っていると、イースターイベント終了後に$FLOWERが当たるチャンスがあります！",
   "description.carrotHouse": "これは人参ですか、それとも家ですか？",
   "description.orangeBunnyLantern": "イースター限定のバニーランタン",
   "description.whiteBunnyLantern": "ランタンの形をした珍しいウサギ",
