--- a/src/lib/i18n/dictionaries/ko.json
+++ b/src/lib/i18n/dictionaries/ko.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "#verify 채널을 방문하여 /verify 명령을 입력합니다.",
   "faceRecognition.mobile": "문제가 있으신가요?",
   "faceRecognition.mobile.two": "모바일 기기에서 사용해 보세요.",
-  "description.easterToken2025": "이스터 이벤트 종료 후 $FLOWER를 받을 수 있는 기회를 놓치지 마세요!",
-  "description.easterTicket2025": "이벤트 종료 전에 부활절 이벤트 상점에서 사용하세요!",
+  "description.easterToken2025": "이벤트 종료 전에 부활절 이벤트 상점에서 사용하세요!",
+  "description.easterTicket2025": "이스터 이벤트 종료 후 $FLOWER를 받을 수 있는 기회를 놓치지 마세요!",
   "description.carrotHouse": "이것은 당근인가요, 집인가요?",
   "description.orangeBunnyLantern": "부활절 특제 토끼 랜턴",
   "description.whiteBunnyLantern": "랜턴 모양의 희귀 토끼",
