--- a/src/lib/i18n/dictionaries/ms.json
+++ b/src/lib/i18n/dictionaries/ms.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "Lawati saluran #verify dan taipkan perintah /verify.",
   "faceRecognition.mobile": "Mempunyai masalah?",
   "faceRecognition.mobile.two": "Cuba pada peranti mudah alih.",
-  "description.easterToken2025": "Pegang ini untuk peluang memenangi $FLOWER selepas acara paskah berakhir!",
-  "description.easterTicket2025": "Gunakan ini di kedai acara paskah sebelum acara berakhir!",
+  "description.easterToken2025": "Gunakan ini di kedai acara paskah sebelum acara berakhir!",
+  "description.easterTicket2025": "Pegang ini untuk peluang memenangi $FLOWER selepas acara paskah berakhir!",
   "description.carrotHouse": "Adakah ini lobak merah atau rumah?",
   "description.orangeBunnyLantern": "Tanglung kelinci istimewa untuk paskah",
   "description.whiteBunnyLantern": "Kelinci yang jarang berlaku dalam bentuk tanglung",
