--- a/src/lib/i18n/dictionaries/pt-BR.json
+++ b/src/lib/i18n/dictionaries/pt-BR.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "Visite o canal #verify e digite o comando /verifica.",
   "faceRecognition.mobile": "Está tendo problemas?",
   "faceRecognition.mobile.two": "Experimente em um dispositivo móvel.",
-  "description.easterToken2025": "Guarde isso para ter a chance de ganhar $ FLOWER após o término do evento de páscoa!",
-  "description.easterTicket2025": "Use isso na loja do evento de páscoa antes que o evento termine!",
+  "description.easterToken2025": "Use isso na loja do evento de páscoa antes que o evento termine!",
+  "description.easterTicket2025": "Guarde isso para ter a chance de ganhar $ FLOWER após o término do evento de páscoa!",
   "description.carrotHouse": "Isso é uma cenoura ou uma casa?",
   "description.orangeBunnyLantern": "Uma lanterna de coelho especial para a páscoa",
   "description.whiteBunnyLantern": "Um coelho raro em forma de lanterna",
