--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "Посетите канал #verify и введите команду /verify.",
   "faceRecognition.mobile": "Возникли проблемы?",
   "faceRecognition.mobile.two": "Попробуйте на мобильном устройстве.",
-  "description.easterToken2025": "Держите этот подарок и получите шанс выиграть $FLOWER после окончания пасхального мероприятия!",
-  "description.easterTicket2025": "Используйте это в магазине пасхальных мероприятий до окончания мероприятия!",
+  "description.easterToken2025": "Используйте это в магазине пасхальных мероприятий до окончания мероприятия!",
+  "description.easterTicket2025": "Держите этот подарок и получите шанс выиграть $FLOWER после окончания пасхального мероприятия!",
   "description.carrotHouse": "Это морковка или домик?",
   "description.orangeBunnyLantern": "Особый пасхальный фонарь в виде кролика",
   "description.whiteBunnyLantern": "Редкий кролик в форме фонаря",
