--- a/src/lib/i18n/dictionaries/tr.json
+++ b/src/lib/i18n/dictionaries/tr.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "#verify kanalını ziyaret edin ve /verify komutunu yazın.",
   "faceRecognition.mobile": "Sorun mu yaşıyorsunuz?",
   "faceRecognition.mobile.two": "Bir mobil cihazda deneyin.",
-  "description.easterToken2025": "Paskalya etkinliği sona erdikten sonra $FLOWER kazanma şansı için bunu tut!",
-  "description.easterTicket2025": "Etkinlik bitmeden bunu Paskalya etkinlik mağazasında kullanın!",
+  "description.easterToken2025": "Etkinlik bitmeden bunu Paskalya etkinlik mağazasında kullanın!",
+  "description.easterTicket2025": "Paskalya etkinliği sona erdikten sonra $FLOWER kazanma şansı için bunu tut!",
   "description.carrotHouse": "Burası havuç mu yoksa ev mi?",
   "description.orangeBunnyLantern": "Paskalya'ya özel bir tavşan feneri",
   "description.whiteBunnyLantern": "Fener şeklinde nadir bir tavşan",
