--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "请在 #verify 频道中输入 /verify 命令。",
   "faceRecognition.mobile": "您遇到问题了吗？",
   "faceRecognition.mobile.two": "请在移动设备上尝试操作。",
-  "description.easterToken2025": "在复活节活动结束后，持有这个有机会赢取 $FLOWER！",
-  "description.easterTicket2025": "活动结束前在复活节活动商店中使用它！",
+  "description.easterToken2025": "活动结束前在复活节活动商店中使用它！",
+  "description.easterTicket2025": "在复活节活动结束后，持有这个有机会赢取 $FLOWER！",
   "description.carrotHouse": "这是胡萝卜还是房子？",
   "description.orangeBunnyLantern": "复活节特别的兔子灯笼",
   "description.whiteBunnyLantern": "一只罕见的灯笼形状的兔子",
