--- a/src/lib/i18n/dictionaries/de.json
+++ b/src/lib/i18n/dictionaries/de.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "Besuchen Sie den Kanal #verify und geben Sie den Befehl /verify ein.",
   "faceRecognition.mobile": "Haben Sie Probleme?",
   "faceRecognition.mobile.two": "Versuchen Sie es auf einem Mobilgerät.",
-  "description.easterToken2025": "Holt das, um nach Ende des Oster-Events $FLOWER zu gewinnen!",
-  "description.easterTicket2025": "Benutze das im Oster-Event-Shop, bevor das Event endet!",
+  "description.easterToken2025": "Benutze das im Oster-Event-Shop, bevor das Event endet!",
+  "description.easterTicket2025": "Holt das, um nach Ende des Oster-Events $FLOWER zu gewinnen!",
   "description.carrotHouse": "Ist das eine Karotte oder ein Haus?",
   "description.orangeBunnyLantern": "Eine Hasenlaterne speziell zu Ostern",
   "description.whiteBunnyLantern": "Ein seltener Hase in Laternenform",
