--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -5755,8 +5755,8 @@
   "softBan.discordInstructions": "Visite el canal #verify y escriba el comando /verify.",
   "faceRecognition.mobile": "¿Tienes problemas?",
   "faceRecognition.mobile.two": "Pruébalo en un dispositivo móvil.",
-  "description.easterToken2025": "¡Guarda esto para tener la oportunidad de ganar $FLOWER cuando termine el evento de pascua!",
-  "description.easterTicket2025": "¡Úsalo en la tienda de eventos de pascua antes de que termine el evento!",
+  "description.easterToken2025": "¡Úsalo en la tienda de eventos de pascua antes de que termine el evento!",
+  "description.easterTicket2025": "¡Guarda esto para tener la oportunidad de ganar $FLOWER cuando termine el evento de pascua!",
   "description.carrotHouse": "¿Es una zanahoria o una casa?",
   "description.orangeBunnyLantern": "Una linterna con forma de conejito especial para pascua",
   "description.whiteBunnyLantern": "Un conejito raro en forma de linterna",
