fixed chef apron boost translation

--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -306,7 +306,7 @@
   "bumpkin.delivery.waiting": "我一直就是在等这个。非常感谢！请尽快回来获取更多送货订单。",
   "bumpkin.delivery.proveYourself": "证明你的价值。再拓张你的地块 {{missingLevels}} 次。",
   "bumpkin.delivery.earnTickets": "赚取 {{ticket}} 来铸造限定物品。",
-  "bumpkinItemBuff.chef.apron.boost": "+20% SFL 蛋糕利润",
+  "bumpkinItemBuff.chef.apron.boost": "+20% FLOWER 蛋糕利润",
   "bumpkinItemBuff.fruit.picker.apron.boost": "+0.1 水果",
   "bumpkinItemBuff.angel.wings.boost": "30% 几率马上获得庄稼",
   "bumpkinItemBuff.devil.wings.boost": "30% 几率马上获得庄稼",
