--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -499,7 +499,7 @@
   "community.toast": "祝贺词为空",
   "community.url": "请输入您的 Repo URL",
   "comunity.Travel": "旅行至社区构筑的岛屿",
-  "compost.fruitfulBlend": "Fruitful Blend 为树坑上生长的每棵果树 +0.1 产出",
+  "compost.fruitfulBlend": "Fruitful Blend 为果坑上生长的每棵果树 +0.1 产出",
   "compost.sproutMix": "Sprout Mix 为田坑上种的庄稼 +0.2 产出",
   "compost.sproutMixBoosted": "Sprout Mix 为田坑上种的庄稼 +0.4 产出",
   "compost.rapidRoot": "Rapid Root 为田坑上种的庄稼 -50% 生长时间",
@@ -3261,7 +3261,7 @@
   "deliveries.guide.one": "Sunflower Land 的送货提供了一个激动人心的机会，可以帮助饥饿的哥布林和其他乡包佬，同时获得奖励。每天您都可以通过点击屏幕左下角的 Codex 图标，然后单击 “送货” 选项卡来查看所有订单。这些订单是由一些 NPC 下的，这些人可以在南瓜广场和其他一些区域找到。要完成订单，请点击左下角的世界图标或法典中的 “前往目的地” 按钮，然后出发，寻找等待送货的 NPC。找到他们后，点击他们交付订单并获得奖励。",
   "scavenger.guide.one": "在 Sunflower Land 搜刮物品为发现隐藏的宝藏和锻造贵重物品提供了令人兴奋的机会。搜刮的第一个选项是在挖掘区挖宝，在那里你可以成为海盗寻宝者。通过冒险前往这个位于海滩北部的区域、在 Jafar 的商店锻造沙铲或沙钻，您可以在沙地挖掘以发现各种宝藏。",
   "scavenger.guide.two": "另一种选项的搜刮是收集野生和魔法蘑菇，这些蘑菇会自然出现在您的农场和周围的岛屿上。这些蘑菇可以被免费收集并用于食谱、任务和物品锻造。留意这些蘑菇，因为它们以不同的间隔补充。野生蘑菇每 16 小时刷新一次，您的农场最多只能生成 5 个野生蘑菇。在新手岛上，魔法蘑菇每 48 小时刷新一次，在春花岛上每 36 小时刷新一次，在沙漠岛上每隔 24 小时刷新一次，农场上最多可补充 3 个魔法蘑菇。如果您的土地已满，蘑菇就会出现在周围的岛屿上，确保您没有错过这些宝贵的资源。",
-  "fruit.guide.two": "要种植水果，您需要获得更大的水果树坑，需要升级到春花岛后方可获取。",
+  "fruit.guide.two": "要种植水果，您需要获得更大的果坑，需要升级到春花岛后方可获取。",
   "keys": "钥匙",
   "seasonedFarmer.description": "收集 50 张时季票券",
   "crops.guide.two": "要种植庄稼，您需要从 Betty 的市场购买相应的种子。每种庄稼的生长时间不同，从向日葵的生长时间仅为 1 分钟到羽衣甘蓝的 36 小时不等。庄稼完全种植后，您可以收获它们并获得回报。",
@@ -3299,8 +3299,8 @@
   "description.gold.beetle": "由金制成的甲壳虫。",
   "description.iron.beetle": "由铁制成的甲壳虫。",
   "description.stone.beetle": "由石头制成的甲壳虫。",
-  "description.macaw.boost": "+0.1 水果树坑产量",
-  "description.camel.onesie.boost": "+0.1 水果树坑产量",
+  "description.macaw.boost": "+0.1 果坑产量",
+  "description.camel.onesie.boost": "+0.1 果坑产量",
   "marketplace.offerClaimed": "恭喜，您的报价已被接受！",
   "ready.in": "准备时间：",
   "creating": "正在创建",
@@ -3961,7 +3961,7 @@
   "marketplace.itemNotStoredOnChain.acceptOffer.warning": "您的物品需要先存放在链子上，然后才能被接受。",
   "marketplace.tradeInitiated": "好消息！看来有人在完成你的交易。请等待交易完成。",
   "description.immortal.pear.boosted.boost": "每颗种子 +2 次收成次数",
-  "description.macaw.boosted.boost": "+0.2 水果树坑产量",
+  "description.macaw.boosted.boost": "+0.2 果坑产量",
   "budBuff.type.plaza.boost": "+0.3 低阶庄稼",
   "budBuff.type.woodlands.boost": "+0.2 木头",
   "budBuff.type.cave.boost": "+0.2 基矿",
